modules/gdscript/tests/scripts/runtime/errors/for_loop_iterator_type_not_match_specified.gd
#debug-only: Run-time differently typed assign checks are disabled in release

func test():
	var a: Array = [Resource.new()]
	for node: Node in a:
		print(node)
